Fixed the navbar menu visibility in the dark mode #49

--- a/style.css
+++ b/style.css
@@ -604,6 +604,11 @@ body.dark-mode .event-date,
         border-bottom: 1px solid #eee;
         margin-left: 0;
     }
+
+    body.dark-mode .nav-links a {
+        color: #2a2a2a;
+    }
+    
 }
 
 @media (max-width: 768px) {
